--- a/src/main.global.less
+++ b/src/main.global.less
@@ -14,3 +14,13 @@ body {
   color: @color-black;
   box-sizing: border-box;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
