--- a/src/shared/CardsList/Card/card.less
+++ b/src/shared/CardsList/Card/card.less
@@ -5,6 +5,7 @@
   border-radius: 7px;
   display: flex;
   flex-flow: row wrap;
+  position: relative;
 
   @media(min-width: 1024px) {
     background-color: transparent;
@@ -121,19 +122,13 @@
 .postLink {
   overflow: hidden;
   display: -webkit-box;
-  box-orient: vertical;
+  -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
 
 .preview {
   max-height: 178px;
   margin: 0 -20px;
-}
-
-.previewImg {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 
   @media(min-width: 1024px) {
     flex-basis: 190px;
@@ -142,3 +137,64 @@
   }
 }
 
+.previewImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.menu {
+  position: absolute;
+  top: 17px;
+  right: 15px;
+}
+
+.menuButton {
+  width: 31px;
+  height: 31px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(90deg);
+  border-radius: 31px;
+  background: transparent;
+  border: 0;
+}
+
+.menu:active, .menuButton:hover {
+  background-color: rgba(51, 51, 51, 0.1);
+}
+
+.controls {
+  padding: 10px 20px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.votesCounter > * + * {
+  padding: 0 0 0 4px;
+}
+
+.votesValue {
+  color: @color-greyC4;
+}
+
+svg.down {
+  transform: rotate(180deg);
+}
+
+.commentsButton {
+  display: flex;
+  align-items: normal;
+}
+
+.commentsButton * {
+  color: @color-greyC4;
+}
+
+.commentsNumber {
+  padding: 0 0 0 6px;
+  font-size: 12px;
+  line-height: 14px;
+}
