--- a/src/shared/CardsList/Card/card.less
+++ b/src/shared/CardsList/Card/card.less
@@ -3,6 +3,7 @@
 .card {
   background-color: @color-white;
   border-radius: 7px;
+  padding: 20px 20px 10px;
   display: flex;
   flex-flow: row wrap;
   position: relative;
@@ -18,6 +19,14 @@
     padding: 20px 60px;
     max-height: 147px;
     cursor: pointer;
+  }
+
+  &:hover, &:focus-within {
+    outline: 1px solid @color-greyD9;
+  }
+
+  &:hover h2 a, &:focus-within h2 a {
+    color: @color-orange;
   }
 }
 
@@ -87,6 +96,10 @@
   @media(min-width: 1024px) {
     padding: 0 0 0 5px;
   }
+
+  &:hover a {
+    text-decoration: underline;
+  }
 }
 
 .avatar {
@@ -102,8 +115,16 @@
   z-index: 1;
 }
 
-.createdAt {
+.createdAt, .createdAt span {
   color: @color-grey99;
+}
+
+.publishedLabel {
+  display: none;
+
+  @media(min-width: 1024px) {
+    display: inline;
+  }
 }
 
 .title {
@@ -124,6 +145,15 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 .preview {
@@ -147,6 +177,18 @@
   position: absolute;
   top: 17px;
   right: 15px;
+  padding: 0;
+
+  @media(min-width: 1024px) {
+    position: relative;
+    order: 2;
+    display: flex;
+    align-items: center;
+    flex: 0 0;
+    top: unset;
+    right: unset;
+    margin: 0 0 0 auto;
+  }
 }
 
 .menuButton {
@@ -157,8 +199,15 @@
   justify-content: center;
   transform: rotate(90deg);
   border-radius: 31px;
-  background: transparent;
-  border: 0;
+
+  @media(min-width: 1024px) {
+    align-self: center;
+    transform: unset;
+  }
+
+  &:hover {
+    background-color: rgba(51, 51, 51, 0.1);
+  }
 }
 
 .menu:active, .menuButton:hover {
@@ -166,14 +215,41 @@
 }
 
 .controls {
-  padding: 10px 20px;
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+
+  @media(min-width: 1024px) {
+    order: 3;
+    flex: 0 0;
+    margin: 0 0 0 24px;
+  }
+}
+
+.votesCounter {
+  @media(min-width: 1024px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column nowrap;
+  }
+
+  & > button.up:hover > svg > path {
+    fill: @color-green;
+  }
+
+  & > button.down:hover > svg > path {
+    fill: @color-orange;
+  }
 }
 
 .votesCounter > * + * {
   padding: 0 0 0 4px;
+
+  @media(min-width: 1024px) {
+    padding: 7px 0 0;
+  }
 }
 
 .votesValue {
@@ -187,6 +263,10 @@ svg.down {
 .commentsButton {
   display: flex;
   align-items: normal;
+
+  @media(min-width: 1024px) {
+    display: none;
+  }
 }
 
 .commentsButton * {
@@ -197,4 +277,22 @@ svg.down {
   padding: 0 0 0 6px;
   font-size: 12px;
   line-height: 14px;
+}
+
+.actions {
+  display: flex;
+  flex-flow: row nowrap;
+
+  @media(min-width: 1024px) {
+    display: none;
+  }
+}
+
+.actions > * + * {
+  margin: 0 0 0 13px;
+}
+
+.shareButton, .saveButton {
+  width: 20px;
+  height: 20px;
 }
