--- a/src/shared/Content/content.less
+++ b/src/shared/Content/content.less
@@ -1,6 +1,8 @@
 @import '../../variables.global.less';
 
 .content {
+  overflow: hidden;
+  
   @media(min-width: 1024px) {
     background-color: @color-white;
     border-radius: 7px 7px 0 0;
