--- a/src/shared/Dropdown/dropdown.module.less
+++ b/src/shared/Dropdown/dropdown.module.less
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    flex: 1 1 0%;
 }
 
 .listContainer {
@@ -10,4 +11,6 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
 }
