--- a/src/shared/CardsList/Card/ActionsDropdown/actionsDropdown.module.less
+++ b/src/shared/CardsList/Card/ActionsDropdown/actionsDropdown.module.less
@@ -35,7 +35,7 @@
     }
 
     &:not(:last-child) {
-        border-bottom: 1px solid #ECECEC;
+        border-bottom: 1px solid @color-greyEC;
     }
 
     &:nth-child(1), &:nth-child(2), &:nth-child(4) {
