--- a/src/shared/CardsList/Card/card.module.less
+++ b/src/shared/CardsList/Card/card.module.less
@@ -21,6 +21,10 @@
     cursor: pointer;
   }
 
+  &:not(:last-child) {
+      margin-bottom: 20px;
+  }
+
   &:hover, &:focus-within {
     outline: 1px solid @color-greyD9;
   }
